--- a/documents/Final Presentation/CI Final Presentation.tex
+++ b/documents/Final Presentation/CI Final Presentation.tex
@@ -47,7 +47,8 @@
 
 \usepackage{graphicx}
 
-\title{Computational Infrastructure for Big Data Analytics - Oozie, Pig, MapReduce and HCatalog}
+
+\title{----- Oozie, Pig, MapReduce and HCatalog ----- Computational Infrastructure for Big Data Analytics}
 
 % A subtitle is optional and this may be deleted
 % \subtitle{Optional Subtitle}
@@ -112,22 +113,25 @@
 
 \begin{frame}{Project objectives}{What are we looking for?}
 
-%\begin{center}
-%    \begin{tabular}{ | l | l | l | p{5cm} |}
-%    \hline
-%    Day & Min Temp & Max Temp & Summary \\ \hline
-%    Monday & 11C & 22C & A clear day with lots of sunshine.  
-%    However, the strong breeze will bring down the temperatures. \\ \hline
-%    Tuesday & 9C & 19C & Cloudy with rain, across many northern regions. Clear spells 
-%    across most of Scotland and Northern Ireland, 
-%    but rain reaching the far northwest. \\ \hline
-%    Wednesday & 10C & 21C & Rain will still linger for the morning. 
-%    Conditions will improve by early afternoon and continue 
-%    throughout the evening. \\
-%    \hline
-%    \end{tabular}
-%\end{center}
+{\tiny
+\begin{center}
+    \begin{tabular}{ | p{2.5cm} | p{0.8cm} | p{1.2cm} | p{1.2cm}| p{0.6cm} | p{1.8cm} | p{1.2cm} |}
+    \hline
+    \textbf{Question} & \textbf{Condition} & \textbf{Related QAs} & \textbf{Ecosystem Apps} & \textbf{Dataset} & \textbf{Program(s)} & \textbf{Current State} \\ \hline
+    
+    How big is the gap between Pig and MapReduce execution times? & Proposed & Performance & Pig, MapReduce, Oozie & NCDC Weather & Max temperature and Mean maximun temperature station-day-month  & Executed on cluster \\ \hline
+   
+    Can Pig exploit the benefits\footnote{Benefits provided by partitioned or bucketed tables.} of Hive through HCatalog?  & Proposed & Performance, Extensibility  & Pig, HCatalog & NCDC Weather & Partitioned weather & Tested on Cluster \\ \hline
+    
+    How easily does Oozie support changes in workflow apps? & Proposed & Reusability, Maintainability & Pig, MapReduce, Oozie & NCDC Weather & Mean maximun temperature station-day-month & Tested on Cloudera VM \\ \hline
+    
+    What is the gap between Oozie and JobControl execution times? & Desired & Performance & Oozie, MapReduce & NCDC Weather & Mean maximun temperature station-day-month & JobControl instance to be coded, tested and executed. \\ 
+   
 
+    \hline
+    \end{tabular}
+\end{center}
+}
 
 \end{frame}
 
