Minor changes in final document.

--- a/documents/Final Document/00-main.tex
+++ b/documents/Final Document/00-main.tex
@@ -44,24 +44,7 @@
 %%*************************************************************************
 
 \documentclass[conference]{IEEEtran}
-\usepackage{blindtext, graphicx}
-\usepackage{listings}
-
-\lstset{
-    showstringspaces=false,
-    backgroundcolor=\color{black!90},
-    basicstyle=\lstfont{white},
-    identifierstyle=\lstfont{white},
-    keywordstyle=\lstfont{magenta!40},
-    numberstyle=\lstfont{white},
-    stringstyle=\lstfont{cyan},
-    commentstyle=\lstfont{yellow!30},
-    emph={
-        hadoop, export
-    },
-    emphstyle={\lstfont{green!60!white}},
-    breaklines=true
-}
+\usepackage{blindtext, graphicx, listings}
 
 
 % correct bad hyphenation here
