--- a/documents/Final Document/00-main.tex
+++ b/documents/Final Document/00-main.tex
@@ -44,9 +44,38 @@
 %%*************************************************************************
 
 \documentclass[journal,onecolumn]{IEEEtran}
-\usepackage{blindtext, graphicx, listings}
+\usepackage{blindtext, graphicx, listings, xcolor}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
+
+\definecolor{commentgreen}{RGB}{2,112,10}
+\definecolor{eminence}{RGB}{108,48,130}
+\definecolor{weborange}{RGB}{255,165,0}
+\definecolor{frenchplum}{RGB}{129,20,83}
+
+\lstset {
+ 	language=C++,
+    frame=tb,
+    tabsize=4,
+    showstringspaces=false,
+    numbers=left,
+    %upquote=true,
+    commentstyle=\color{commentgreen},
+    keywordstyle=\color{eminence},
+    stringstyle=\color{red},
+    basicstyle=\small\ttfamily, % basic font setting
+    emph={git,mvn,export,hadoop,pig,hive,oozie},
+    emphstyle={\color{blue}},
+    escapechar=\&,
+    % keyword highlighting
+    classoffset=1, % starting new class
+    otherkeywords={>,<,.,;,-,!,=,~},
+    morekeywords={>,<,.,;,-,!,=,~},
+    keywordstyle=\color{weborange},
+    classoffset=0,
+    extendedchars=true,
+    literate={á}{{\'a}}1 {ã}{{\~a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
+}
 
 % correct bad hyphenation here
 %\hyphenation{op-tical net-works semi-conduc-tor}
