Objectives table added in the final report.

--- a/documents/Final Document/03-objectives.tex
+++ b/documents/Final Document/03-objectives.tex
@@ -1,1 +1,21 @@
 My objectives.
+
+{\tiny
+\begin{center}
+    \begin{tabular}{ | p{2.5cm} | p{0.8cm} | p{1.2cm} | p{1.2cm}| p{0.6cm} | p{1.8cm} | p{1.2cm} |}
+    \hline
+    \textbf{Question} & \textbf{Condition} & \textbf{Related QAs} & \textbf{Ecosystem Apps} & \textbf{Dataset} & \textbf{Program(s)} & \textbf{Current State} \\ \hline
+    
+    How big is the gap between Pig and MapReduce execution times? & Proposed & Performance & Pig, MapReduce, Oozie & NCDC Weather & Max temperature and Mean maximun temperature station-day-month  & Executed on cluster \\ \hline
+   
+    Can Pig exploit the benefits\footnote{Benefits provided by partitioned or bucketed tables.} of Hive through HCatalog?  & Proposed & Performance, Extensibility  & Pig, HCatalog & NCDC Weather & Partitioned weather & Tested on Cluster \\ \hline
+    
+    How easily does Oozie support changes in workflow apps? & Proposed & Reusability, Maintainability & Pig, MapReduce, Oozie & NCDC Weather & Mean maximun temperature station-day-month & Tested on Cloudera VM \\ \hline
+    
+    What is the gap between Oozie and JobControl execution times? & Desired & Performance & Oozie, MapReduce & NCDC Weather & Mean maximun temperature station-day-month & JobControl instance to be coded, tested and executed. \\ 
+   
+
+    \hline
+    \end{tabular}
+\end{center}
+}
