--- a/documents/Final Document/00-main.tex
+++ b/documents/Final Document/00-main.tex
@@ -166,7 +166,7 @@ map reduce, pig, hive, hcatalog, oozie.
 
 
 
-\section{Introduction}
+\section*{Introducción}
 \input{02-introduction}
 
 \section{Objetivos del proyecto}
@@ -203,13 +203,8 @@ map reduce, pig, hive, hcatalog, oozie.
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
-
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
-
-\end{thebibliography}
+\bibliography{references}
+ \bibliographystyle{IEEEtran}
 
 % biography section
 % 
