--- a/documents/Final Document/03-objectives.tex
+++ b/documents/Final Document/03-objectives.tex
@@ -1,21 +1,20 @@
-My objectives.
+El objetivo general del proyecto consiste en analizar, desde un punto de vista arquitectónico, algunas de las herramientas que conforman el ecosistema de Hadoop. Para esto, se estudiará MapReduce, Apache Pig, Apache Hive, HCatalog, y Apache Oozie desde la perspectiva de los atributos de calidad de desempeño (\textit{performance}), reusabilidad (\textit{reusability}), extensibilidad (\textit{extensibility}), y mantenibilidad (\textit{maintainability})). A continación se describen los objetivos específicos del proyecto y los atributos de calidad asociados a cada uno de estos. \\
 
-{\tiny
-\begin{center}
-    \begin{tabular}{ | p{2.5cm} | p{0.8cm} | p{1.2cm} | p{1.2cm}| p{0.6cm} | p{1.8cm} | p{1.2cm} |}
-    \hline
-    \textbf{Question} & \textbf{Condition} & \textbf{Related QAs} & \textbf{Ecosystem Apps} & \textbf{Dataset} & \textbf{Program(s)} & \textbf{Current State} \\ \hline
-    
-    How big is the gap between Pig and MapReduce execution times? & Proposed & Performance & Pig, MapReduce, Oozie & NCDC Weather & Max temperature and Mean maximun temperature station-day-month  & Executed on cluster \\ \hline
-   
-    Can Pig exploit the benefits\footnote{Benefits provided by partitioned or bucketed tables.} of Hive through HCatalog?  & Proposed & Performance, Extensibility  & Pig, HCatalog & NCDC Weather & Partitioned weather & Tested on Cluster \\ \hline
-    
-    How easily does Oozie support changes in workflow apps? & Proposed & Reusability, Maintainability & Pig, MapReduce, Oozie & NCDC Weather & Mean maximun temperature station-day-month & Tested on Cloudera VM \\ \hline
-    
-    What is the gap between Oozie and JobControl execution times? & Desired & Performance & Oozie, MapReduce & NCDC Weather & Mean maximun temperature station-day-month & JobControl instance to be coded, tested and executed. \\ 
-   
+\begin{enumerate}
 
-    \hline
-    \end{tabular}
-\end{center}
+\item
+{
+Construir y ejecutar un caso de estudio bajo un entorno de pruebas controlado, el cual permita, en una primera instancia, entender la diferencia en los tiempos de ejecución de MapReduce, ApachePig, y Apache Hive. Atributo de calidad relacionado: \textit{performance}.
 }
+
+\item
+{
+Construir y ejecutar un caso de estudio bajo un entorno de pruebas controlado, el cual permita, en una primera instancia, entender si Apache Pig podría aprovechar las ventajas de Apache Hive a través de HCatalog. Atributos de calidad relacionados: \textit{performance, extensibility}.
+}
+
+\item
+{
+Construir y ejecutar un caso de estudio bajo un entorno de pruebas controlado, el cual permita, en una primera instancia, entender la posibilidad de re-uso y la facilidad de mantener \textit{workflows} en Apache Oozie. Atributos de calidad relacionados: \textit{reusability, maintainability}.
+}
+
+\end{enumerate}
